[workspace]
members = [
    "ladybug",
    "libgreat",
    "moondancer",
    "smolusb",
]
resolver = "2"

exclude = [
]

# - profiles ------------------------------------------------------------------

[profile.release]
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = "s"
overflow-checks = false

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 0
overflow-checks = false
