[package]
name = "busdancer-hal"
version = "0.0.1"
authors = ["Renz Bagaporo  <renz.bagaporo@gmail.com>"]
license = "BSD-3-Clause"
description = "Moondancer compatibility HAL for BusDancer"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["busdancer", "bsp"]
edition = "2021"
rust-version = "1.68"

include = ["examples/**/*", "src/**/*", "README.md", "memory.x"]

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = [
    "thumbv7em-none-eabihf",
]

[lib]
test = false
bench = false

# - features ------------------------------------------------------------------

[features]
# build smolusb hal driver
usb = [
    "log",
    "smolusb",
]


# - dependencies --------------------------------------------------------------

[dependencies]
imxrt-ral = { version = "=0.5.4", features = ["imxrt1011"] }
imxrt-hal = { version = "=0.5.9", features = ["imxrt1010"]}
log = { version = "=0.4.17", optional = true }
nb = "=1.1.0"
cortex-m = { version = "=0.7.7", features = ["critical-section-single-core"] }
smolusb = { version = "0.1.6", path = "../smolusb", optional = true }


# - dev-dependencies ----------------------------------------------------------

[dev-dependencies]
busdancer-pac = { version = "0.0.1", path = "../busdancer-pac", default-features = false, features = ["critical-section", "rt"]}
panic-halt = "=0.2.0"
cortex-m = { version = "=0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "=0.7"