[package]
name = "busdancer-hal"
version = "0.0.1"
authors = ["Renz Bagaporo  <renz.bagaporo@gmail.com>"]
license = "BSD-3-Clause"
description = "Moondancer compatibility HAL for BusDancer"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["busdancer", "bsp"]
edition = "2021"
rust-version = "1.68"

include = ["examples/**/*", "src/**/*", "README.md", "memory.x"]

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = [
    "thumbv7em-none-eabihf",
]

[lib]
test = false
bench = false

# - features ------------------------------------------------------------------

[features]
# build smolusb hal driver
usb = [
    "log",
    "smolusb",
]


# - dependencies --------------------------------------------------------------

[dependencies]
embedded-hal = "=1.0.0-alpha.9"
embedded-hal-0 = { package = "embedded-hal", version = "=0.2.7", features = ["unproven"] }
embedded-hal-nb = "=1.0.0-alpha.1"
log = { version = "=0.4.17", optional = true }
nb = "=1.1.0"
riscv = { version = "=0.7.7", features = ["critical-section-single-core"], package = "cortex-m" }
smolusb = { version = "0.1.6", path = "../smolusb", optional = true }


[dependencies.imxrt-iomuxc]
version = "0.3.0"
features = ["imxrt1010"]

[dependencies.imxrt-ral]
version = "0.6"
features = ["imxrt1011"]

[dependencies.imxrt-rt]
version = "0.1.5"

[dependencies.imxrt-boot-gen]
features = ["imxrt1010"]
version = "0.2"



[patch.crates-io.imxrt-ral]
git = "https://github.com/imxrt-rs/imxrt-ral"


[patch.crates-io.imxrt-iomuxc]
git = "https://github.com/imxrt-rs/imxrt-iomuxc"


# - dev-dependencies ----------------------------------------------------------

[dev-dependencies]
busdancer-pac = { version = "0.0.1", path = "../busdancer-pac", default-features = false, features = ["critical-section", "rt"]}
panic-halt = "=0.2.0"
riscv = { version = "=0.7.7", features = ["critical-section-single-core"], package = "cortex-m" }
cortex-m-rt = "=0.7"