[package]
name = "busdancer-pac"
version = "0.0.1"
authors = ["Renz Bagaporo  <renz.bagaporo@gmail.com>"]
license = "BSD-3-Clause"
description = "Moondancer compatibilty PAC for BusDancer"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["busdancer", "bsp"]
edition = "2021"
rust-version = "1.68"

include = ["src/**/*", "README.md", "device.x", "build.rs"]

[package.metadata.docs.rs]
default-target =  "thumbv7em-none-eabihf"
targets = [
    "thumbv7em-none-eabihf",
]

[lib]
test = false
bench = false

# - features ------------------------------------------------------------------

[features]
# build smolusb hal driver
rt = ["cortex-m-rt"]

# - dependencies --------------------------------------------------------------

[dependencies]
critical-section = { version = "=1.2.0", optional = true }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", optional =  true }
vcell = "=0.1.3"