[package]
name = "moondancer"
version = "0.1.8"
authors = ["Great Scott Gadgets <dev@greatscottgadgets.com>"]
license = "BSD-3-Clause"
description = "Moondancer firmware for the Great Scott Gadgets Cynthion USB Test Instrument"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["cynthion", "luna", "riscv"]
homepage = "https://greatscottgadgets.com/cynthion/"
repository = "https://github.com/greatscottgadgets/cynthion"
documentation = "https://cynthion.readthedocs.io"
edition = "2021"
rust-version = "1.68"

autobins = false
autoexamples = false
autotests = false
autobenches = false

default-run = "moondancer"

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = [
    "thumbv7em-none-eabihf",
]

# - features ------------------------------------------------------------------

[features]

# support for using a logic analyzer and the gpio ports for debugging
ladybug = ["ladybug/enable"]
alloc = []
cynthion_hw = []


# - dependencies --------------------------------------------------------------

[dependencies]
cynthion = { version = "0.1.1", path = "../../cynthion/rust" }
ladybug = { version = "0.1.6", path = "../ladybug" }
libgreat = { version = "0.1.1", path = "../libgreat", features = ["errno_minimal"] }
heapless = { version = "0.8.0", default-features = false, features = ["mpmc_large"] }
zerocopy = { version = "0.7.34", default-features = false, features = ["derive", "byteorder"] }
log = { version="=0.4.17", features = ["release_max_level_info"] }
smolusb = { version = "0.1.6", path = "../smolusb"}
lunasoc_hal = {version = "0.0.1", path = "../busdancer-hal", package="busdancer-hal", default-features = false, features = ["usb"]}
moondancer_pac = {version = "0.0.1", path = "../busdancer-pac", package="busdancer-pac"}
riscv = { version = "=0.7.7", features = ["critical-section-single-core"], package = "cortex-m" }
riscv-rt = { version = "=0.7", package = "cortex-m-rt" }


# - binaries ------------------------------------------------------------------

[[bin]]
name = "moondancer"

# - examples ------------------------------------------------------------------

[[example]]
name = "acm_serial"

[[example]]
name = "bulk_speed_test"

[[example]]
name = "gpio"

[[example]]
name = "hello"

[[example]]
name = "interrupts"

[[example]]
name = "spiflash"

[[example]]
name = "usb_hal"
